--- a/package.json
+++ b/package.json
@@ -1,78 +1,82 @@
 {
-    "name": "notespace",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "^4.1.0",
-        "@radix-ui/react-accordion": "^1.2.3",
-        "@radix-ui/react-alert-dialog": "^1.1.6",
-        "@radix-ui/react-aspect-ratio": "^1.1.2",
-        "@radix-ui/react-avatar": "^1.1.3",
-        "@radix-ui/react-checkbox": "^1.1.4",
-        "@radix-ui/react-collapsible": "^1.1.3",
-        "@radix-ui/react-context-menu": "^2.2.6",
-        "@radix-ui/react-dialog": "^1.1.6",
-        "@radix-ui/react-dropdown-menu": "^2.1.6",
-        "@radix-ui/react-hover-card": "^1.1.6",
-        "@radix-ui/react-label": "^2.1.2",
-        "@radix-ui/react-menubar": "^1.1.6",
-        "@radix-ui/react-navigation-menu": "^1.2.5",
-        "@radix-ui/react-popover": "^1.1.6",
-        "@radix-ui/react-progress": "^1.1.2",
-        "@radix-ui/react-radio-group": "^1.2.3",
-        "@radix-ui/react-scroll-area": "^1.2.3",
-        "@radix-ui/react-select": "^2.1.6",
-        "@radix-ui/react-separator": "^1.1.2",
-        "@radix-ui/react-slider": "^1.2.3",
-        "@radix-ui/react-slot": "^1.1.2",
-        "@radix-ui/react-switch": "^1.1.3",
-        "@radix-ui/react-tabs": "^1.1.3",
-        "@radix-ui/react-toggle": "^1.1.2",
-        "@radix-ui/react-toggle-group": "^1.1.2",
-        "@radix-ui/react-tooltip": "^1.1.8",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "cmdk": "1.0.0",
-        "date-fns": "^4.1.0",
-        "embla-carousel-react": "^8.5.2",
-        "input-otp": "^1.4.2",
-        "lucide-react": "^0.475.0",
-        "motion": "^12.4.4",
-        "next": "15.1.7",
-        "next-themes": "^0.4.4",
-        "react": "^19.0.0",
-        "react-day-picker": "8.10.1",
-        "react-dom": "^19.0.0",
-        "react-hook-form": "^7.54.2",
-        "react-resizable-panels": "^2.1.7",
-        "recharts": "^2.15.1",
-        "sonner": "^1.7.4",
-        "tailwind-merge": "^3.0.1",
-        "vaul": "^1.1.2",
-        "zod": "^3.24.2"
-    },
-    "devDependencies": {
-        "@eioluseyi/tailwind-fade": "^1.0.1",
-        "@eslint/eslintrc": "^3",
-        "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/container-queries": "^0.1.1",
-        "@tailwindcss/postcss": "^4.0.0",
-        "@tailwindcss/typography": "^0.5.16",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint": "^9",
-        "eslint-config-next": "15.1.7",
-        "postcss": "^8",
-        "tailwind-scrollbar": "^4.0.0",
-        "tailwindcss": "^4.0.7",
-        "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5"
-    }
+	"name": "notespace",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint && eslint src ",
+		"lint:fix": "eslint src  --fix",
+		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,html}'",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@eioluseyi/tailwind-fade": "^1.0.1",
+		"@hookform/resolvers": "^3.10.0",
+		"@radix-ui/react-avatar": "^1.1.2",
+		"@radix-ui/react-checkbox": "^1.1.3",
+		"@radix-ui/react-collapsible": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.5",
+		"@radix-ui/react-dropdown-menu": "^2.1.5",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-navigation-menu": "^1.2.4",
+		"@radix-ui/react-popover": "^1.1.5",
+		"@radix-ui/react-scroll-area": "^1.2.2",
+		"@radix-ui/react-select": "^2.1.5",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.2",
+		"@radix-ui/react-tooltip": "^1.1.7",
+		"@tailwindcss/typography": "^0.5.16",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.474.0",
+		"motion": "^12.0.5",
+		"next": "15.1.6",
+		"next-themes": "^0.4.4",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-use-measure": "^2.1.1",
+		"sonner": "^1.7.2",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss-motion": "^1.0.1",
+		"use-resize-observer": "^9.1.0",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/postcss": "^4.0.0",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.6",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.4.3",
+		"postcss": "^8",
+		"prettier": "^3.4.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"pre-push": "npm run lint && npm run format"
+		}
+	},
+	"lint-staged": {
+		"src/**/*.{ts,tsx,js,jsx}": [
+			"npm run lint:fix",
+			"npm run lint",
+			"npm run format",
+			"git add ."
+		]
+	}
 }
