--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,16 @@
-# EditorConfig is awesome: https://EditorConfig.org
+# See http://EditorConfig.org for more information
 
 # top-most EditorConfig file
 root = true
 
+# Every File
 [*]
-indent_style = space
-indent_size = 4
 end_of_line = lf
-charset = utf-8
+insert_final_newline = true
 trim_trailing_whitespace = true
-insert_final_newline = false
+charset = utf-8
+indent_style = space
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
