--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
 		"lint": "next lint && eslint src ",
 		"lint:fix": "eslint src  --fix",
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,html}'",
-		"prepare": "husky"
+		"prepare": "husky",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
+		"db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+		"db:check": "drizzle-kit check"
 	},
 	"dependencies": {
 		"@eioluseyi/tailwind-fade": "^1.0.1",
 		"@hookform/resolvers": "^3.10.0",
+		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-collapsible": "^1.1.2",
@@ -29,21 +34,27 @@
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.7",
 		"@tailwindcss/typography": "^0.5.16",
+		"better-auth": "^1.1.21",
+		"bufferutil": "^4.0.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.7",
+		"drizzle-orm": "^0.39.3",
 		"lucide-react": "^0.474.0",
 		"motion": "^12.0.5",
-		"next": "15.1.6",
+		"next": "^15.1.7",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-use-measure": "^2.1.1",
+		"resend": "^4.1.2",
 		"sonner": "^1.7.2",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tailwindcss-motion": "^1.0.1",
 		"use-resize-observer": "^9.1.0",
+		"ws": "^8.18.1",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
@@ -53,8 +64,9 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/ws": "^8.5.14",
 		"eslint": "^9",
-		"eslint-config-next": "15.1.6",
+		"eslint-config-next": "^15.1.7",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"husky": "^9.1.7",
@@ -64,6 +76,12 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5"
+	},
+	"engines": {
+		"node": ">=18.x",
+		"npm": ">=7.0.0",
+		"yarn": "3.4.1",
+		"bun": ">= 3.4.1"
 	},
 	"husky": {
 		"hooks": {
