--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "notespace",
 	"version": "0.1.0",
 	"private": true,
+	"workspaces": ["packages/*"],
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build",
@@ -17,65 +18,65 @@
 	},
 	"dependencies": {
 		"@eioluseyi/tailwind-fade": "^1.0.1",
-		"@hookform/resolvers": "^3.10.0",
+		"@hookform/resolvers": "^4.1.2",
 		"@neondatabase/serverless": "^0.10.4",
-		"@radix-ui/react-avatar": "^1.1.2",
-		"@radix-ui/react-checkbox": "^1.1.3",
-		"@radix-ui/react-collapsible": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.5",
-		"@radix-ui/react-dropdown-menu": "^2.1.5",
-		"@radix-ui/react-label": "^2.1.1",
-		"@radix-ui/react-navigation-menu": "^1.2.4",
-		"@radix-ui/react-popover": "^1.1.5",
-		"@radix-ui/react-scroll-area": "^1.2.2",
-		"@radix-ui/react-select": "^2.1.5",
-		"@radix-ui/react-separator": "^1.1.1",
-		"@radix-ui/react-slot": "^1.1.1",
-		"@radix-ui/react-tabs": "^1.1.2",
-		"@radix-ui/react-tooltip": "^1.1.7",
+		"@radix-ui/react-avatar": "^1.1.3",
+		"@radix-ui/react-checkbox": "^1.1.4",
+		"@radix-ui/react-collapsible": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-navigation-menu": "^1.2.5",
+		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-scroll-area": "^1.2.3",
+		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.3",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tailwindcss/typography": "^0.5.16",
 		"better-auth": "^1.1.21",
-		"bufferutil": "^4.0.9",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.7",
-		"drizzle-orm": "^0.39.3",
-		"lucide-react": "^0.474.0",
-		"motion": "^12.0.5",
-		"next": "^15.1.7",
+		"drizzle-orm": "^0.40.0",
+		"lucide-react": "^0.476.0",
+		"motion": "^12.4.7",
+		"next": "^15.2.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
-		"react-use-measure": "^2.1.1",
+		"react-use-measure": "^2.1.7",
 		"resend": "^4.1.2",
-		"sonner": "^1.7.2",
-		"tailwind-merge": "^2.6.0",
+		"sonner": "^2.0.1",
+		"tailwind-merge": "^3.0.2",
+		"tailwind-scrollbar": "^4.0.1",
 		"tailwindcss-animate": "^1.0.7",
-		"tailwindcss-motion": "^1.0.1",
+		"tailwindcss-motion": "^1.1.0",
 		"use-resize-observer": "^9.1.0",
 		"ws": "^8.18.1",
-		"zod": "^3.24.1"
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3",
+		"@eslint/eslintrc": "^3.3.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/postcss": "^4.0.0",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
+		"@tailwindcss/postcss": "^4.0.9",
+		"@types/node": "^22.13.5",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
 		"@types/ws": "^8.5.14",
-		"eslint": "^9",
-		"eslint-config-next": "^15.1.7",
-		"eslint-config-prettier": "^10.0.1",
+		"eslint": "^9.21.0",
+		"eslint-config-next": "^15.2.0",
+		"eslint-config-prettier": "^10.0.2",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.4.3",
-		"postcss": "^8",
-		"prettier": "^3.4.2",
+		"postcss": "^8.5.3",
+		"prettier": "^3.5.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5"
+		"tailwindcss": "^4.0.9",
+		"typescript": "^5.7.3"
 	},
 	"engines": {
 		"node": ">=18.x",
