fixed missing dependency @tailwindcss/container-queries added trpc, better auth for auth and some utils and ui

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "notespace",
 	"version": "0.1.0",
 	"private": true,
+	"description": "Second Home for Students for boosting Productivity",
+	"license": "AGPL-3.0-or-later",
+	"author": "Rohit Tiwari",
 	"workspaces": ["packages/*"],
 	"scripts": {
 		"dev": "next dev --turbopack",
@@ -34,12 +37,20 @@
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@radix-ui/react-tooltip": "^1.1.8",
+		"@t3-oss/env-nextjs": "^0.12.0",
+		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.16",
-		"better-auth": "^1.1.21",
+		"@tanstack/react-query": "^5.66.11",
+		"@trpc/client": "^11.0.0-rc.819",
+		"@trpc/react-query": "^11.0.0-rc.819",
+		"@trpc/server": "^11.0.0-rc.819",
+		"@types/bun": "^1.2.4",
+		"better-auth": "v1.2.1-beta.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.40.0",
+		"jiti": "^2.4.2",
+		"levenshtein-edit-distance": "^3.0.1",
 		"lucide-react": "^0.476.0",
 		"motion": "^12.4.7",
 		"next": "^15.2.0",
@@ -49,7 +60,9 @@
 		"react-hook-form": "^7.54.2",
 		"react-use-measure": "^2.1.7",
 		"resend": "^4.1.2",
+		"server-only": "^0.0.1",
 		"sonner": "^2.0.1",
+		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-scrollbar": "^4.0.1",
 		"tailwindcss-animate": "^1.0.7",
@@ -62,7 +75,7 @@
 		"@eslint/eslintrc": "^3.3.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/postcss": "^4.0.9",
-		"@types/node": "^22.13.5",
+		"@types/node": "^22.13.8",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@types/ws": "^8.5.14",
@@ -76,7 +89,7 @@
 		"prettier": "^3.5.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^4.0.9",
-		"typescript": "^5.7.3"
+		"typescript": "^5.8.2"
 	},
 	"engines": {
 		"node": ">=18.x",
