--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -1,82 +1,87 @@
 $schema: https://raw.githubusercontent.com/streetsidesoftware/cspell/main/cspell.schema.json
-version: '0.2'
+version: "0.2"
 ignorePaths:
-  - node_modules
-  - bun.lockb
-  - .tsbuildinfo
-  - .gitignore
-  - .next
-  - drizzle
-  - '**/*.svg'
-  - .vscode/extensions.json
-  - public
-  - tsconfig.tsbuildinfo
-  - branch_out
+    - node_modules
+    - bun.lockb
+    - .tsbuildinfo
+    - .gitignore
+    - .next
+    - drizzle
+    - "**/*.svg"
+    - .vscode/extensions.json
+    - public
+    - tsconfig.tsbuildinfo
+    - branch_out
 words:
-  - activecampaign
-  - aeiou
-  - Arcjet
-  - asana
-  - autopilotmail
-  - autoresponder
-  - bcdfghj
-  - bigcommerce
-  - callees
-  - classname
-  - clsx
-  - commitlint
-  - compat
-  - constantcontact
-  - customerservice
-  - esbenp
-  - facebookmail
-  - freshdesk
-  - frontmatter
-  - healthcheck
-  - helpdesk
-  - helpscout
-  - hookform
-  - hubspot
-  - ianvs
-  - ixahmedxi
-  - ixahmedxii
-  - jiti
-  - lockb
-  - lucide
-  - mailchimp
-  - mailgun
-  - marketo
-  - mitigations
-  - neondatabase
-  - nextjs
-  - noreplys
-  - packagejson
-  - paralleldrive
-  - pinterest
-  - pipedrive
-  - Posthog
-  - postmarkapp
-  - ratelimit
-  - redditmail
-  - Registrator
-  - sendgrid
-  - sendinblue
-  - serviceworker
-  - Shadcn
-  - Signin
-  - Signup
-  - Sonner
-  - sslmode
-  - superjson
-  - tailwindcss
-  - tanstack
-  - tawk
-  - timeago
-  - Todos
-  - trpc
-  - tsbuildinfo
-  - tseslint
-  - typecheck
-  - Uploadthing
-  - Upstash
-  - usehooks
+    - activecampaign
+    - aeiou
+    - Arcjet
+    - asana
+    - autopilotmail
+    - autoresponder
+    - bcdfghj
+    - bigcommerce
+    - callees
+    - classname
+    - clsx
+    - commitlint
+    - compat
+    - constantcontact
+    - customerservice
+    - esbenp
+    - facebookmail
+    - freshdesk
+    - frontmatter
+    - healthcheck
+    - helpdesk
+    - helpscout
+    - hookform
+    - hubspot
+    - ianvs
+    - ixahmedxi
+    - ixahmedxii
+    - jiti
+    - lockb
+    - lucide
+    - mailchimp
+    - mailgun
+    - marketo
+    - mitigations
+    - neondatabase
+    - nextjs
+    - noreplys
+    - packagejson
+    - paralleldrive
+    - pinterest
+    - pipedrive
+    - Posthog
+    - postmarkapp
+    - ratelimit
+    - redditmail
+    - Registrator
+    - sendgrid
+    - sendinblue
+    - serviceworker
+    - Shadcn
+    - Signin
+    - Signup
+    - Sonner
+    - sslmode
+    - superjson
+    - tailwindcss
+    - tanstack
+    - tawk
+    - timeago
+    - Todos
+    - trpc
+    - tsbuildinfo
+    - tseslint
+    - typecheck
+    - Uploadthing
+    - Upstash
+    - usehooks
+    - eioluseyi
+    - turbopack
+    - Tiwari
+    - Rohit
+    - notespace
