--- a/package.json
+++ b/package.json
@@ -5,24 +5,40 @@
 	"description": "Second Home for Students for boosting Productivity",
 	"license": "AGPL-3.0-or-later",
 	"author": "Rohit Tiwari",
-	"workspaces": ["packages/*"],
+	"type": "module",
+	"workspaces": [
+		"packages/*"
+	],
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev --turbo",
 		"build": "next build",
-		"start": "next start",
-		"lint": "next lint && eslint src ",
-		"lint:fix": "eslint src  --fix",
-		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,html}'",
-		"prepare": "husky",
+		"clean": "bun run rm -rf .next node_modules *.tsbuildinfo next-env.d.ts",
+		"commit": "git-cz",
+		"db:check": "drizzle-kit check",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "drizzle-kit migrate",
+		"db:migrate:drop": "drizzle-kit migrate:drop",
+		"db:pull": "drizzle-kit introspect",
 		"db:push": "drizzle-kit push",
-		"db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
-		"db:generate": "drizzle-kit generate --config=drizzle.config.ts",
-		"db:check": "drizzle-kit check"
+		"db:studio": "drizzle-kit studio",
+		"db:up": "drizzle-kit up",
+		"email:dev": "SKIP_ENV_VALIDATION=true email dev --port 3001 --dir src/emails/templates",
+		"format": "pnpm format:write",
+		"format:check": "prettier \"**/*\" --ignore-unknown --list-different",
+		"format:write": "prettier \"**/*\" --ignore-unknown --list-different --write",
+		"lint": "bun lint:js && bun lint:md && bun lint:spell",
+		"lint:js": "eslint . --max-warnings 0",
+		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\" --ignore node_modules",
+		"lint:spell": "cspell \"**/*\" --no-summary --no-progress",
+		"prepare": "husky",
+		"start": "next start",
+		"typecheck": "tsc"
 	},
 	"dependencies": {
 		"@eioluseyi/tailwind-fade": "^1.0.1",
 		"@hookform/resolvers": "^4.1.2",
 		"@neondatabase/serverless": "^0.10.4",
+		"@paralleldrive/cuid2": "^2.2.2",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.3",
@@ -44,19 +60,22 @@
 		"@trpc/client": "^11.0.0-rc.819",
 		"@trpc/react-query": "^11.0.0-rc.819",
 		"@trpc/server": "^11.0.0-rc.819",
-		"@types/bun": "^1.2.4",
 		"better-auth": "v1.2.1-beta.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"drizzle-cuid2": "^2.0.0",
 		"drizzle-orm": "^0.40.0",
+		"drizzle-zod": "^0.7.0",
 		"jiti": "^2.4.2",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lucide-react": "^0.476.0",
 		"motion": "^12.4.7",
 		"next": "^15.2.0",
+		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-email": "^3.0.7",
 		"react-hook-form": "^7.54.2",
 		"react-use-measure": "^2.1.7",
 		"resend": "^4.1.2",
@@ -64,51 +83,86 @@
 		"sonner": "^2.0.1",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.0.2",
-		"tailwind-scrollbar": "^4.0.1",
-		"tailwindcss-animate": "^1.0.7",
-		"tailwindcss-motion": "^1.1.0",
+		"timeago.js": "^4.0.2",
 		"use-resize-observer": "^9.1.0",
+		"usehooks-ts": "^3.1.1",
 		"ws": "^8.18.1",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.28.1",
+		"@commitlint/cli": "^19.7.1",
+		"@commitlint/config-conventional": "^19.7.1",
+		"@commitlint/cz-commitlint": "^19.6.1",
+		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+		"@eslint/compat": "^1.2.7",
 		"@eslint/eslintrc": "^3.3.0",
+		"@eslint/js": "^9.21.0",
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/postcss": "^4.0.9",
+		"@total-typescript/ts-reset": "^0.6.1",
+		"@types/bun": "^1.2.4",
+		"@types/color": "^4.2.0",
+		"@types/eslint": "^9.6.1",
+		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/node": "^22.13.8",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@types/ws": "^8.5.14",
+		"commitizen": "^4.3.1",
+		"cspell": "^8.17.5",
+		"drizzle-kit": "^0.30.5",
 		"eslint": "^9.21.0",
 		"eslint-config-next": "^15.2.0",
 		"eslint-config-prettier": "^10.0.2",
-		"eslint-plugin-unused-imports": "^4.1.4",
+		"eslint-plugin-jsdoc": "^50.6.3",
+		"eslint-plugin-regexp": "^2.7.0",
+		"eslint-plugin-security": "^3.0.1",
+		"eslint-plugin-tailwindcss": "^3.18.0",
+		"globals": "^16.0.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.4.3",
+		"markdownlint": "^0.37.4",
+		"markdownlint-cli": "^0.44.0",
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.2",
+		"prettier-plugin-curly": "^0.3.1",
+		"prettier-plugin-packagejson": "^2.5.9",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwind-scrollbar": "^4.0.1",
 		"tailwindcss": "^4.0.9",
-		"typescript": "^5.8.2"
+		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss-motion": "^1.1.0",
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.25.0"
 	},
 	"engines": {
 		"node": ">=18.x",
 		"npm": ">=7.0.0",
 		"yarn": "3.4.1",
-		"bun": ">= 3.4.1"
+		"bun": ">= 1.2.4"
 	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged",
-			"pre-push": "npm run lint && npm run format"
-		}
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
 	},
 	"lint-staged": {
-		"src/**/*.{ts,tsx,js,jsx}": [
-			"npm run lint:fix",
-			"npm run lint",
-			"npm run format",
-			"git add ."
+		"*": [
+			"cspell --no-must-find-files",
+			"prettier --list-different"
+		],
+		"**/*.{ts,tsx,js,jsx,cjs,mjs}": [
+			"eslint"
+		],
+		"**/*.{md,mdx}": [
+			"markdownlint"
 		]
+	},
+	"config": {
+		"commitizen": {
+			"path": "@commitlint/cz-commitlint"
+		}
 	}
 }
