--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"format:check": "prettier \"**/*\" --ignore-unknown --list-different",
 		"format:write": "prettier \"**/*\" --ignore-unknown --list-different --write",
 		"lint": "bun lint:js && bun lint:md && bun lint:spell ",
+		"lint:fix": "eslint . --fix",
 		"lint:js": "eslint . --max-warnings 0",
 		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\" --ignore node_modules",
 		"lint:spell": "cspell \"**/*\" --no-summary --no-progress",
@@ -42,7 +43,7 @@
 	},
 	"lint-staged": {
 		"*": [
-			"cspell --no-must-find-files",
+			"cspell  --no-must-find-files --no-show-suggestions ",
 			"prettier --list-different"
 		],
 		"**/*.{ts,tsx,js,jsx,cjs,mjs}": [
@@ -58,10 +59,10 @@
 		}
 	},
 	"dependencies": {
-		"@eioluseyi/tailwind-fade": "^1.0.1",
-		"@hookform/resolvers": "^4.1.2",
+		"@hookform/resolvers": "^4.1.3",
 		"@neondatabase/serverless": "^0.10.4",
 		"@paralleldrive/cuid2": "^2.2.2",
+		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.3",
@@ -76,26 +77,24 @@
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@radix-ui/react-tooltip": "^1.1.8",
+		"@t3-oss/env-core": "^0.12.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/typography": "^0.5.16",
-		"@tanstack/react-query": "^5.66.11",
-		"@trpc/client": "^11.0.0-rc.819",
-		"@trpc/react-query": "^11.0.0-rc.819",
-		"@trpc/server": "^11.0.0-rc.819",
-		"better-auth": "^1.2.1",
+		"@tanstack/react-query": "^5.69.0",
+		"@trpc/client": "^11.0.0",
+		"@trpc/react-query": "^11.0.0",
+		"@trpc/server": "^11.0.0",
+		"better-auth": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"drizzle-cuid2": "^2.0.0",
-		"drizzle-orm": "^0.40.0",
+		"drizzle-orm": "^0.41.0",
 		"drizzle-zod": "^0.7.0",
-		"jiti": "^2.4.2",
+		"eslint-config-next": "^15.2.4",
 		"levenshtein-edit-distance": "^3.0.1",
-		"lucide-react": "^0.476.0",
-		"motion": "^12.4.7",
-		"next": "^15.2.0",
+		"lucide-react": "^0.483.0",
+		"motion": "^12.5.0",
+		"next": "^15.2.4",
 		"next-mdx-remote": "^5.0.0",
-		"next-themes": "^0.4.4",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-email": "^3.0.7",
@@ -114,52 +113,46 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
-		"@commitlint/cli": "^19.7.1",
-		"@commitlint/config-conventional": "^19.7.1",
-		"@commitlint/cz-commitlint": "^19.6.1",
-		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
-		"@eslint/compat": "^1.2.7",
-		"@eslint/eslintrc": "^3.3.0",
-		"@eslint/js": "^9.21.0",
+		"@commitlint/cli": "^19.8.0",
+		"@commitlint/config-conventional": "^19.8.0",
+		"@commitlint/cz-commitlint": "^19.8.0",
+		"@eioluseyi/tailwind-fade": "^1.0.1",
+		"@eslint/eslintrc": "^3.3.1",
+		"@eslint/js": "^9.23.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"@next/eslint-plugin-next": "^15.2.4",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/postcss": "^4.0.9",
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@tailwindcss/postcss": "^4.0.15",
+		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/bun": "^1.2.4",
-		"@types/color": "^4.2.0",
-		"@types/eslint": "^9.6.1",
-		"@types/eslint-config-prettier": "^6.11.3",
-		"@types/node": "^22.13.8",
-		"@types/react": "^19.0.10",
+		"@types/bun": "^1.2.5",
+		"@types/node": "^22.13.13",
+		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
-		"@types/ws": "^8.5.14",
+		"@types/ws": "^8.18.0",
 		"commitizen": "^4.3.1",
 		"cspell": "^8.17.5",
 		"drizzle-kit": "^0.30.5",
-		"eslint": "^9.21.0",
-		"eslint-config-next": "^15.2.0",
-		"eslint-config-prettier": "^10.0.2",
-		"eslint-plugin-jsdoc": "^50.6.3",
-		"eslint-plugin-regexp": "^2.7.0",
-		"eslint-plugin-security": "^3.0.1",
-		"globals": "^16.0.0",
+		"eslint": "^9.23.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-plugin-prettier": "^5.2.4",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.4.3",
+		"lint-staged": "^15.5.0",
 		"markdownlint": "^0.37.4",
 		"markdownlint-cli": "^0.44.0",
 		"postcss": "^8.5.3",
-		"postcss-load-config": "^6.0.1",
-		"prettier": "^3.5.2",
+		"prettier": "^3.5.3",
 		"prettier-plugin-curly": "^0.3.1",
-		"prettier-plugin-packagejson": "^2.5.9",
+		"prettier-plugin-packagejson": "^2.5.10",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"prettier-remove-unused-imports": "^1.1.21",
 		"tailwind-scrollbar": "^4.0.1",
-		"tailwindcss": "^4.0.9",
+		"tailwindcss": "^4.0.15",
 		"tailwindcss-animate": "^1.0.7",
-		"tailwindcss-motion": "^1.1.0",
-		"typescript": "^5.8.2",
-		"typescript-eslint": "^8.25.0"
+		"typescript": "^5.8.2"
 	},
 	"engines": {
 		"bun": ">= 1.2.4",
