--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
 	"compilerOptions": {
-		"strict": true,
 		"allowUnusedLabels": false,
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitOverride": true,
 		"noPropertyAccessFromIndexSignature": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"checkJs": true,
 		"forceConsistentCasingInFileNames": true,
-		"module": "esnext",
-		"target": "es2022",
+
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
+		"strict": true,
 		"noEmit": true,
 		"esModuleInterop": true,
+		"module": "esnext",
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
@@ -28,7 +27,8 @@
 		],
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"target": "ES2022"
 	},
 	"include": [
 		"next-env.d.ts",
