--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
 		"prettier-plugin-packagejson": "^2.5.10",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"prettier-remove-unused-imports": "^1.1.21",
+		"sharp": "^0.33.5",
 		"tailwind-scrollbar": "^4.0.1",
 		"tailwindcss": "^4.0.15",
 		"tailwindcss-animate": "^1.0.7",
