--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"drizzle-orm": "^0.41.0",
 		"drizzle-zod": "^0.7.0",
 		"eslint-config-next": "^15.2.4",
+		"ioredis": "^5.6.0",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lucide-react": "^0.483.0",
 		"motion": "^12.5.0",
