--- a/package.json
+++ b/package.json
@@ -88,8 +88,10 @@
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.41.0",
 		"drizzle-zod": "^0.7.0",
+		"emoji-picker-react": "^4.12.2",
 		"eslint-config-next": "^15.2.4",
 		"ioredis": "^5.6.0",
+		"latest": "^0.2.0",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lucide-react": "^0.483.0",
 		"motion": "^12.5.0",
