--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
-		"@neondatabase/serverless": "^0.10.4",
+		"@neondatabase/serverless": "^1.0.0",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-avatar": "^1.1.3",
@@ -79,33 +79,34 @@
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@t3-oss/env-core": "^0.12.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.69.0",
-		"@trpc/client": "^11.0.0",
-		"@trpc/react-query": "^11.0.0",
-		"@trpc/server": "^11.0.0",
-		"better-auth": "^1.2.4",
+		"@tanstack/react-query": "^5.70.0",
+		"@trpc/client": "^11.0.1",
+		"@trpc/react-query": "^11.0.1",
+		"@trpc/server": "^11.0.1",
+		"better-auth": "^1.2.5",
 		"class-variance-authority": "^0.7.1",
+		"cloudinary": "^2.6.0",
 		"clsx": "^2.1.1",
 		"drizzle-orm": "^0.41.0",
-		"drizzle-zod": "^0.7.0",
+		"drizzle-zod": "^0.7.1",
 		"emoji-picker-react": "^4.12.2",
 		"eslint-config-next": "^15.2.4",
 		"ioredis": "^5.6.0",
 		"latest": "^0.2.0",
 		"levenshtein-edit-distance": "^3.0.1",
-		"lucide-react": "^0.483.0",
-		"motion": "^12.5.0",
+		"lucide-react": "^0.485.0",
+		"motion": "^12.6.2",
 		"next": "^15.2.4",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-email": "^3.0.7",
-		"react-hook-form": "^7.54.2",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-email": "3.0.7",
+		"react-hook-form": "^7.55.0",
 		"react-use-measure": "^2.1.7",
-		"resend": "^4.1.2",
+		"resend": "^4.2.0",
 		"server-only": "^0.0.1",
-		"sonner": "^2.0.1",
+		"sonner": "^2.0.2",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.0.2",
 		"timeago.js": "^4.0.2",
@@ -126,20 +127,20 @@
 		"@next/eslint-plugin-next": "^15.2.4",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/postcss": "^4.0.15",
+		"@tailwindcss/postcss": "^4.0.17",
 		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/bun": "^1.2.5",
-		"@types/node": "^22.13.13",
+		"@types/bun": "^1.2.8",
+		"@types/node": "^22.13.14",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@types/ws": "^8.18.0",
 		"commitizen": "^4.3.1",
-		"cspell": "^8.17.5",
-		"drizzle-kit": "^0.30.5",
+		"cspell": "^8.18.0",
+		"drizzle-kit": "^0.30.6",
 		"eslint": "^9.23.0",
 		"eslint-config-prettier": "^10.1.1",
-		"eslint-plugin-prettier": "^5.2.4",
+		"eslint-plugin-prettier": "^5.2.5",
 		"eslint-plugin-react": "^7.37.4",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^9.1.7",
@@ -147,14 +148,14 @@
 		"markdownlint": "^0.37.4",
 		"markdownlint-cli": "^0.44.0",
 		"postcss": "^8.5.3",
-		"prettier": "^3.5.3",
+		"prettier": "3.4.2",
 		"prettier-plugin-curly": "^0.3.1",
 		"prettier-plugin-packagejson": "^2.5.10",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"prettier-remove-unused-imports": "^1.1.21",
 		"sharp": "^0.33.5",
 		"tailwind-scrollbar": "^4.0.1",
-		"tailwindcss": "^4.0.15",
+		"tailwindcss": "^4.0.17",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.8.2"
 	},
