--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		}
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^4.1.3",
+		"@hookform/resolvers": "^5.0.1",
 		"@neondatabase/serverless": "^1.0.0",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@radix-ui/react-accordion": "^1.2.3",
@@ -79,6 +79,7 @@
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-navigation-menu": "^1.2.5",
 		"@radix-ui/react-popover": "^1.1.6",
+		"@radix-ui/react-radio-group": "^1.2.3",
 		"@radix-ui/react-scroll-area": "^1.2.3",
 		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-separator": "^1.1.2",
@@ -87,11 +88,11 @@
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@t3-oss/env-core": "^0.12.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.70.0",
-		"@trpc/client": "^11.0.1",
-		"@trpc/react-query": "^11.0.1",
-		"@trpc/server": "^11.0.1",
-		"better-auth": "1.2.6-beta.3",
+		"@tanstack/react-query": "^5.71.10",
+		"@trpc/client": "^11.0.2",
+		"@trpc/react-query": "^11.0.2",
+		"@trpc/server": "^11.0.2",
+		"better-auth": "1.2.5",
 		"class-variance-authority": "^0.7.1",
 		"cloudinary": "^2.6.0",
 		"clsx": "^2.1.1",
@@ -102,26 +103,28 @@
 		"ioredis": "^5.6.0",
 		"latest": "^0.2.0",
 		"levenshtein-edit-distance": "^3.0.1",
-		"lucide-react": "^0.485.0",
-		"motion": "^12.6.2",
+		"lodash": "^4.17.21",
+		"lucide-react": "^0.487.0",
+		"motion": "^12.6.3",
 		"next": "^15.2.4",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-email": "3.0.7",
+		"react-email": "4.0.4",
 		"react-hook-form": "^7.55.0",
 		"react-use-measure": "^2.1.7",
 		"resend": "^4.2.0",
 		"server-only": "^0.0.1",
-		"sonner": "^2.0.2",
+		"sonner": "^2.0.3",
 		"superjson": "^2.2.2",
-		"tailwind-merge": "^3.0.2",
+		"tailwind-merge": "^3.1.0",
 		"timeago.js": "^4.0.2",
 		"use-resize-observer": "^9.1.0",
 		"usehooks-ts": "^3.1.1",
 		"ws": "^8.18.1",
-		"zod": "^3.24.2"
+		"zod": "^3.24.2",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
@@ -130,42 +133,43 @@
 		"@commitlint/cz-commitlint": "^19.8.0",
 		"@eioluseyi/tailwind-fade": "^1.0.1",
 		"@eslint/eslintrc": "^3.3.1",
-		"@eslint/js": "^9.23.0",
+		"@eslint/js": "^9.24.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
 		"@next/eslint-plugin-next": "^15.2.4",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/postcss": "^4.0.17",
+		"@tailwindcss/postcss": "^4.1.3",
 		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.2.8",
-		"@types/node": "^22.13.14",
-		"@types/react": "^19.0.12",
-		"@types/react-dom": "^19.0.4",
-		"@types/ws": "^8.18.0",
+		"@types/lodash": "^4.17.16",
+		"@types/node": "^22.14.0",
+		"@types/react": "^19.1.0",
+		"@types/react-dom": "^19.1.1",
+		"@types/ws": "^8.18.1",
 		"commitizen": "^4.3.1",
-		"cspell": "^8.18.0",
+		"cspell": "^8.18.1",
 		"drizzle-kit": "^0.30.6",
-		"eslint": "^9.23.0",
+		"eslint": "^9.24.0",
 		"eslint-config-prettier": "^10.1.1",
-		"eslint-plugin-prettier": "^5.2.5",
-		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-prettier": "^5.2.6",
+		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.5.0",
 		"markdownlint": "^0.37.4",
 		"markdownlint-cli": "^0.44.0",
 		"postcss": "^8.5.3",
-		"prettier": "3.4.2",
-		"prettier-plugin-curly": "^0.3.1",
+		"prettier": "3.5.3",
+		"prettier-plugin-curly": "^0.3.2",
 		"prettier-plugin-packagejson": "^2.5.10",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"prettier-remove-unused-imports": "^1.1.21",
-		"sharp": "^0.33.5",
-		"tailwind-scrollbar": "^4.0.1",
-		"tailwindcss": "^4.1.2",
+		"sharp": "^0.34.0",
+		"tailwind-scrollbar": "^4.0.2",
+		"tailwindcss": "^4.1.3",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.8.2"
+		"typescript": "^5.8.3"
 	},
 	"engines": {
 		"bun": ">= 1.2.4",
