feat(module): module add delete and remove

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 	},
 	"lint-staged": {
 		"*": [
-			"cspell  --no-must-find-files --no-show-suggestions ",
+			"cspell  --no-must-find-files",
 			"prettier --list-different"
 		],
 		"**/*.{ts,tsx,js,jsx,cjs,mjs}": [
@@ -69,7 +69,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^5.0.1",
 		"@neondatabase/serverless": "^1.0.0",
-		"@paralleldrive/cuid2": "^2.2.2",
+		"@orama/cuid2": "^2.2.3",
 		"@radix-ui/react-accordion": "^1.2.4",
 		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-checkbox": "^1.1.5",
@@ -88,11 +88,11 @@
 		"@radix-ui/react-tooltip": "^1.2.0",
 		"@t3-oss/env-core": "^0.12.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.72.2",
-		"@trpc/client": "^11.0.4",
-		"@trpc/react-query": "^11.0.4",
-		"@trpc/server": "^11.0.4",
-		"better-auth": "1.2.5",
+		"@tanstack/react-query": "^5.74.0",
+		"@trpc/client": "^11.1.0",
+		"@trpc/react-query": "^11.1.0",
+		"@trpc/server": "^11.1.0",
+		"better-auth": "1.2.7",
 		"class-variance-authority": "^0.7.1",
 		"cloudinary": "^2.6.0",
 		"clsx": "^2.1.1",
@@ -100,12 +100,12 @@
 		"drizzle-zod": "^0.7.1",
 		"emoji-picker-react": "^4.12.2",
 		"eslint-config-next": "^15.3.0",
-		"ioredis": "^5.6.0",
+		"ioredis": "^5.6.1",
 		"latest": "^0.2.0",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lodash": "^4.17.21",
-		"lucide-react": "^0.487.0",
-		"motion": "^12.6.3",
+		"lucide-react": "^0.488.0",
+		"motion": "^12.6.5",
 		"next": "^15.3.0",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
@@ -143,8 +143,8 @@
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/bun": "^1.2.9",
 		"@types/lodash": "^4.17.16",
-		"@types/node": "^22.14.0",
-		"@types/react": "^19.1.0",
+		"@types/node": "^22.14.1",
+		"@types/react": "^19.1.1",
 		"@types/react-dom": "^19.1.2",
 		"@types/ws": "^8.18.1",
 		"commitizen": "^4.3.1",
@@ -156,7 +156,7 @@
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.5.0",
+		"lint-staged": "^15.5.1",
 		"markdownlint": "^0.37.4",
 		"markdownlint-cli": "^0.44.0",
 		"postcss": "^8.5.3",
