--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"@radix-ui/react-select": "^2.1.7",
 		"@radix-ui/react-separator": "^1.1.3",
 		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-switch": "^1.1.4",
 		"@radix-ui/react-tabs": "^1.1.4",
 		"@radix-ui/react-tooltip": "^1.2.0",
 		"@t3-oss/env-core": "^0.12.0",
