--- a/package.json
+++ b/package.json
@@ -67,118 +67,121 @@
 		}
 	},
 	"dependencies": {
-		"@ai-sdk/react": "^1.2.11",
-		"@blocknote/code-block": "^0.29.1",
-		"@blocknote/core": "^0.29.1",
-		"@blocknote/mantine": "^0.29.1",
-		"@blocknote/react": "^0.29.1",
-		"@blocknote/xl-multi-column": "^0.29.1",
-		"@hookform/resolvers": "^5.0.1",
-		"@neondatabase/serverless": "^1.0.0",
+		"@ai-sdk/react": "^1.2.12",
+		"@blocknote/code-block": "^0.34.0",
+		"@blocknote/core": "^0.34.0",
+		"@blocknote/mantine": "^0.34.0",
+		"@blocknote/react": "^0.34.0",
+		"@blocknote/xl-multi-column": "^0.34.0",
+		"@hookform/resolvers": "^5.1.1",
+		"@neondatabase/serverless": "^1.0.1",
 		"@orama/cuid2": "^2.2.3",
-		"@radix-ui/react-accordion": "^1.2.8",
-		"@radix-ui/react-avatar": "^1.1.7",
-		"@radix-ui/react-checkbox": "^1.2.3",
-		"@radix-ui/react-collapsible": "^1.1.8",
-		"@radix-ui/react-dialog": "^1.1.11",
-		"@radix-ui/react-dropdown-menu": "^2.1.12",
-		"@radix-ui/react-label": "^2.1.4",
-		"@radix-ui/react-navigation-menu": "^1.2.10",
-		"@radix-ui/react-popover": "^1.1.11",
-		"@radix-ui/react-radio-group": "^1.3.4",
-		"@radix-ui/react-scroll-area": "^1.2.6",
-		"@radix-ui/react-select": "^2.2.2",
-		"@radix-ui/react-separator": "^1.1.4",
-		"@radix-ui/react-slot": "^1.2.0",
-		"@radix-ui/react-switch": "^1.2.2",
-		"@radix-ui/react-tabs": "^1.1.9",
-		"@radix-ui/react-tooltip": "^1.2.4",
-		"@t3-oss/env-core": "^0.13.4",
-		"@t3-oss/env-nextjs": "^0.13.4",
-		"@tanstack/react-query": "^5.75.1",
-		"@trpc/client": "^11.1.2",
-		"@trpc/react-query": "^11.1.2",
-		"@trpc/server": "^11.1.2",
-		"ai": "^4.3.13",
-		"better-auth": "1.2.7",
+		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-checkbox": "^1.3.2",
+		"@radix-ui/react-collapsible": "^1.1.11",
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-navigation-menu": "^1.2.13",
+		"@radix-ui/react-popover": "^1.1.14",
+		"@radix-ui/react-radio-group": "^1.3.7",
+		"@radix-ui/react-scroll-area": "^1.2.9",
+		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-switch": "^1.2.5",
+		"@radix-ui/react-tabs": "^1.1.12",
+		"@radix-ui/react-tooltip": "^1.2.7",
+		"@t3-oss/env-core": "^0.13.8",
+		"@t3-oss/env-nextjs": "^0.13.8",
+		"@tabler/icons-react": "^3.34.1",
+		"@tanstack/react-query": "^5.83.0",
+		"@trpc/client": "^11.4.3",
+		"@trpc/react-query": "^11.4.3",
+		"@trpc/server": "^11.4.3",
+		"ai": "^4.3.19",
+		"better-auth": "1.3.2",
 		"class-variance-authority": "^0.7.1",
-		"cloudinary": "^2.6.0",
+		"cloudinary": "^2.7.0",
 		"clsx": "^2.1.1",
 		"color": "^5.0.0",
-		"drizzle-orm": "^0.43.1",
-		"drizzle-zod": "^0.7.1",
-		"emoji-picker-react": "^4.12.2",
-		"eslint-config-next": "^15.3.1",
+		"drizzle-orm": "^0.44.3",
+		"drizzle-zod": "^0.8.2",
+		"emoji-picker-react": "^4.13.2",
+		"eslint-config-next": "^15.4.2",
 		"ioredis": "^5.6.1",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lodash": "^4.17.21",
-		"lucide-react": "^0.506.0",
-		"motion": "^12.9.4",
-		"next": "^15.3.1",
+		"lucide-react": "^0.525.0",
+		"motion": "^12.23.6",
+		"next": "^15.4.2",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
+		"puppeteer": "^24.14.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-email": "4.0.11",
-		"react-hook-form": "^7.56.1",
+		"react-email": "4.2.3",
+		"react-fast-marquee": "^1.6.5",
+		"react-hook-form": "^7.60.0",
 		"react-sortablejs": "^6.1.4",
 		"react-use-measure": "^2.1.7",
-		"resend": "^4.5.0",
+		"resend": "^4.7.0",
 		"server-only": "^0.0.1",
-		"sonner": "^2.0.3",
+		"sonner": "^2.0.6",
 		"superjson": "^2.2.2",
-		"tailwind-merge": "^3.2.0",
+		"tailwind-merge": "^3.3.1",
 		"timeago.js": "^4.0.2",
 		"tiptap-extension-auto-joiner": "^0.1.3",
-		"use-debounce": "^10.0.4",
+		"use-debounce": "^10.0.5",
 		"use-resize-observer": "^9.1.0",
 		"usehooks-ts": "^3.1.1",
-		"ws": "^8.18.1",
-		"zod": "^3.24.3",
-		"zustand": "^5.0.4"
+		"ws": "^8.18.3",
+		"zod": "^4.0.5",
+		"zustand": "^5.0.6"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.29.2",
-		"@commitlint/cli": "^19.8.0",
-		"@commitlint/config-conventional": "^19.8.0",
-		"@commitlint/cz-commitlint": "^19.8.0",
-		"@eioluseyi/tailwind-fade": "^1.0.1",
+		"@changesets/cli": "^2.29.5",
+		"@commitlint/cli": "^19.8.1",
+		"@commitlint/config-conventional": "^19.8.1",
+		"@commitlint/cz-commitlint": "^19.8.1",
+		"@eioluseyi/tailwind-fade": "^1.1.1",
 		"@eslint/eslintrc": "^3.3.1",
-		"@eslint/js": "^9.25.1",
-		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-		"@next/eslint-plugin-next": "^15.3.1",
+		"@eslint/js": "^9.31.0",
+		"@ianvs/prettier-plugin-sort-imports": "^4.5.1",
+		"@next/eslint-plugin-next": "^15.4.2",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/postcss": "^4.1.5",
+		"@tailwindcss/postcss": "^4.1.11",
 		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/bun": "^1.2.11",
-		"@types/lodash": "^4.17.16",
-		"@types/node": "^22.15.3",
-		"@types/react": "^19.1.2",
-		"@types/react-dom": "^19.1.3",
+		"@types/bun": "^1.2.19",
+		"@types/lodash": "^4.17.20",
+		"@types/node": "^24.0.15",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
 		"@types/ws": "^8.18.1",
 		"commitizen": "^4.3.1",
-		"cspell": "^8.19.3",
-		"drizzle-kit": "^0.31.0",
-		"eslint": "^9.25.1",
-		"eslint-config-prettier": "^10.1.2",
-		"eslint-plugin-prettier": "^5.2.6",
+		"cspell": "^9.2.0",
+		"drizzle-kit": "^0.31.4",
+		"eslint": "^9.31.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-prettier": "^5.5.3",
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.5.1",
-		"markdownlint": "^0.37.4",
-		"markdownlint-cli": "^0.44.0",
-		"postcss": "^8.5.3",
-		"prettier": "3.5.3",
+		"lint-staged": "^16.1.2",
+		"markdownlint": "^0.38.0",
+		"markdownlint-cli": "^0.45.0",
+		"postcss": "^8.5.6",
+		"prettier": "3.6.2",
 		"prettier-plugin-curly": "^0.3.2",
-		"prettier-plugin-packagejson": "^2.5.10",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prettier-plugin-packagejson": "^2.5.19",
+		"prettier-plugin-tailwindcss": "^0.6.14",
 		"prettier-remove-unused-imports": "^1.1.21",
-		"sharp": "^0.34.1",
+		"sharp": "^0.34.3",
 		"tailwind-scrollbar": "^4.0.2",
-		"tailwindcss": "^4.1.5",
+		"tailwindcss": "^4.1.11",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.8.3"
 	},
