fix: many commits

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -27,6 +27,10 @@ words:
     - autoresponder
     - banlist
     - Banlist
+    - Pinnable
+    - Expandded
+    - ultrawide
+    - pinnable
     - BANLIST
     - bcdfghj
     - bigcommerce
