--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
 		"clean": "bun run rm -rf .next node_modules *.tsbuildinfo next-env.d.ts",
 		"commit": "git-cz",
 		"db:check": "drizzle-kit check",
+		"db:drop": "drizzle-kit drop",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
-		"db:migrate:drop": "drizzle-kit migrate:drop",
 		"db:pull": "drizzle-kit introspect",
 		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio",
 		"db:up": "drizzle-kit up",
-		"dev": "next dev --turbo",
+		"dev": "next dev --turbopack",
 		"email:dev": "SKIP_ENV_VALIDATION=true email dev --port 3001 --dir src/emails/templates",
 		"format": "pnpm format:write",
 		"format:check": "prettier \"**/*\" --ignore-unknown --list-different",
@@ -67,68 +67,84 @@
 		}
 	},
 	"dependencies": {
-		"@ai-sdk/react": "^1.2.12",
-		"@blocknote/code-block": "^0.34.0",
-		"@blocknote/core": "^0.34.0",
-		"@blocknote/mantine": "^0.34.0",
-		"@blocknote/react": "^0.34.0",
-		"@blocknote/xl-multi-column": "^0.34.0",
-		"@hookform/resolvers": "^5.1.1",
+		"@ai-sdk/react": "^2.0.22",
+		"@blocknote/code-block": "^0.35.0",
+		"@blocknote/core": "^0.35.0",
+		"@blocknote/mantine": "^0.35.0",
+		"@blocknote/react": "^0.35.0",
+		"@blocknote/xl-multi-column": "^0.35.0",
+		"@hookform/resolvers": "^5.2.1",
 		"@neondatabase/serverless": "^1.0.1",
 		"@orama/cuid2": "^2.2.3",
-		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-accordion": "^1.2.12",
+		"@radix-ui/react-alert-dialog": "^1.1.15",
+		"@radix-ui/react-aspect-ratio": "^1.1.7",
 		"@radix-ui/react-avatar": "^1.1.10",
-		"@radix-ui/react-checkbox": "^1.3.2",
-		"@radix-ui/react-collapsible": "^1.1.11",
-		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-dropdown-menu": "^2.1.15",
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-collapsible": "^1.1.12",
+		"@radix-ui/react-context-menu": "^2.2.16",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-hover-card": "^1.1.15",
 		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-navigation-menu": "^1.2.13",
-		"@radix-ui/react-popover": "^1.1.14",
-		"@radix-ui/react-radio-group": "^1.3.7",
-		"@radix-ui/react-scroll-area": "^1.2.9",
-		"@radix-ui/react-select": "^2.2.5",
+		"@radix-ui/react-menubar": "^1.1.16",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-progress": "^1.1.7",
+		"@radix-ui/react-radio-group": "^1.3.8",
+		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slider": "^1.3.6",
 		"@radix-ui/react-slot": "^1.2.3",
-		"@radix-ui/react-switch": "^1.2.5",
-		"@radix-ui/react-tabs": "^1.1.12",
-		"@radix-ui/react-tooltip": "^1.2.7",
+		"@radix-ui/react-switch": "^1.2.6",
+		"@radix-ui/react-tabs": "^1.1.13",
+		"@radix-ui/react-toggle": "^1.1.10",
+		"@radix-ui/react-toggle-group": "^1.1.11",
+		"@radix-ui/react-tooltip": "^1.2.8",
 		"@t3-oss/env-core": "^0.13.8",
 		"@t3-oss/env-nextjs": "^0.13.8",
 		"@tabler/icons-react": "^3.34.1",
-		"@tanstack/react-query": "^5.83.0",
-		"@trpc/client": "^11.4.3",
-		"@trpc/react-query": "^11.4.3",
-		"@trpc/server": "^11.4.3",
-		"ai": "^4.3.19",
-		"better-auth": "1.3.2",
+		"@tanstack/react-query": "^5.85.5",
+		"@trpc/client": "^11.5.0",
+		"@trpc/react-query": "^11.5.0",
+		"@trpc/server": "^11.5.0",
+		"ai": "^5.0.22",
+		"better-auth": "1.3.7",
 		"class-variance-authority": "^0.7.1",
 		"cloudinary": "^2.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"color": "^5.0.0",
-		"drizzle-orm": "^0.44.3",
-		"drizzle-zod": "^0.8.2",
+		"date-fns": "^4.1.0",
+		"drizzle-orm": "^0.44.4",
+		"drizzle-zod": "^0.8.3",
+		"embla-carousel-react": "^8.6.0",
 		"emoji-picker-react": "^4.13.2",
-		"eslint-config-next": "^15.4.2",
-		"ioredis": "^5.6.1",
+		"eslint-config-next": "^15.5.0",
+		"input-otp": "^1.4.2",
+		"ioredis": "^5.7.0",
 		"levenshtein-edit-distance": "^3.0.1",
 		"lodash": "^4.17.21",
-		"lucide-react": "^0.525.0",
-		"motion": "^12.23.6",
-		"next": "^15.4.2",
+		"lucide-react": "^0.541.0",
+		"motion": "^12.23.12",
+		"next": "^15.5.0",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
-		"puppeteer": "^24.14.0",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"react-email": "4.2.3",
+		"radix-ui": "^1.4.3",
+		"react": "^19.1.1",
+		"react-day-picker": "^9.9.0",
+		"react-dom": "^19.1.1",
+		"react-email": "4.2.8",
 		"react-fast-marquee": "^1.6.5",
-		"react-hook-form": "^7.60.0",
+		"react-hook-form": "^7.62.0",
+		"react-resizable-panels": "^3.0.5",
 		"react-sortablejs": "^6.1.4",
 		"react-use-measure": "^2.1.7",
-		"resend": "^4.7.0",
+		"recharts": "3.1.2",
+		"resend": "^6.0.1",
 		"server-only": "^0.0.1",
-		"sonner": "^2.0.6",
+		"sonner": "^2.0.7",
 		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.3.1",
 		"timeago.js": "^4.0.2",
@@ -136,41 +152,42 @@
 		"use-debounce": "^10.0.5",
 		"use-resize-observer": "^9.1.0",
 		"usehooks-ts": "^3.1.1",
+		"vaul": "^1.1.2",
 		"ws": "^8.18.3",
-		"zod": "^4.0.5",
-		"zustand": "^5.0.6"
+		"zod": "^4.1.0",
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.29.5",
+		"@changesets/cli": "^2.29.6",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@commitlint/cz-commitlint": "^19.8.1",
 		"@eioluseyi/tailwind-fade": "^1.1.1",
 		"@eslint/eslintrc": "^3.3.1",
-		"@eslint/js": "^9.31.0",
-		"@ianvs/prettier-plugin-sort-imports": "^4.5.1",
-		"@next/eslint-plugin-next": "^15.4.2",
+		"@eslint/js": "^9.34.0",
+		"@ianvs/prettier-plugin-sort-imports": "^4.6.2",
+		"@next/eslint-plugin-next": "^15.5.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/postcss": "^4.1.11",
+		"@tailwindcss/postcss": "^4.1.12",
 		"@tailwindcss/typography": "^0.5.16",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/bun": "^1.2.19",
+		"@types/bun": "^1.2.20",
 		"@types/lodash": "^4.17.20",
-		"@types/node": "^24.0.15",
-		"@types/react": "^19.1.8",
-		"@types/react-dom": "^19.1.6",
+		"@types/node": "^24.3.0",
+		"@types/react": "^19.1.11",
+		"@types/react-dom": "^19.1.7",
 		"@types/ws": "^8.18.1",
 		"commitizen": "^4.3.1",
 		"cspell": "^9.2.0",
 		"drizzle-kit": "^0.31.4",
-		"eslint": "^9.31.0",
+		"eslint": "^9.34.0",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-prettier": "^5.5.3",
+		"eslint-plugin-prettier": "^5.5.4",
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^9.1.7",
-		"lint-staged": "^16.1.2",
+		"lint-staged": "^16.1.5",
 		"markdownlint": "^0.38.0",
 		"markdownlint-cli": "^0.45.0",
 		"postcss": "^8.5.6",
@@ -181,9 +198,10 @@
 		"prettier-remove-unused-imports": "^1.1.21",
 		"sharp": "^0.34.3",
 		"tailwind-scrollbar": "^4.0.2",
-		"tailwindcss": "^4.1.11",
+		"tailwindcss": "^4.1.12",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.8.3"
+		"tw-animate-css": "^1.3.7",
+		"typescript": "^5.9.2"
 	},
 	"engines": {
 		"bun": ">= 1.2.4",
